--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -52,12 +52,12 @@
             </div>
     <!-- create by cm -->
         </div>  
-            <div class="nav-tip" id="nav_demand">
-                <a href="{:U('Demand/demandlist')}">企业需求</a>
-            </div>
-            <div class="nav-tip" id="nav_research">
-                <a href="{:U('Result/resultlist')}">科技成果</a>
-            </div>
+        <div class="nav-tip" id="nav_demand">
+            <a href="{:U('Demand/demandlist')}">企业需求</a>
+        </div>
+        <div class="nav-tip" id="nav_research">
+            <a href="{:U('Result/resultlist')}">科技成果</a>
+        </div>
         <div class="nav-tip" id="nav_edu">
             <a href="{:U('Edu/edulist')}">教育培训</a>
             <div class="nav-list">
@@ -87,6 +87,14 @@
                 </p>
             </div>
         </div>
+        
+         <div class="nav-tip" id="nav_classic">
+            <a href="{:U('ClassicCase/caselist')}">典型案例</a>
+        </div>
+        <div class="nav-tip" id="nav_download">
+            <a href="{:U('Download/filelist')}">下载中心</a>
+        </div>
+
     </div>
 </div>
 
