--- a/Application/Master/View/Index/index.html
+++ b/Application/Master/View/Index/index.html
@@ -49,6 +49,15 @@
 					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>需求管理</a></li>
 					<li role="presentation"><a href="{:U('Master/Demand/demand_list')}">需求列表</a></li>
 					
+					<!-- 典型案例 -->
+					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>典型案例</a></li>
+					<li role="presentation"><a href="{:U('Master/ClassicCase/case_list')}">案例列表</a></li>
+					<li role="presentation"><a href="{:U('Master/ClassicCase/add_modify')}">添加案例</a></li>
+
+					<!-- 下载管理 -->
+					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>下载管理</a></li>
+					<li role="presentation"><a href="{:U('Master/Download/file_list')}">文档列表</a></li>
+					<li role="presentation"><a href="{:U('Master/Download/add_modify')}">添加文件</a></li>
 
 					<!-- 信息咨询 -->
 					<li role="presentation"><a class="title"><span class="glyphicon glyphicon-tag"></span>信息咨询</a></li>
