--- a/Application/Home/View/Demand/demand.html
+++ b/Application/Home/View/Demand/demand.html
@@ -153,10 +153,11 @@
     <include file="Public/footer"/>
     
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
 </body>
 <script>
      $(function(){
         $('#nav_demand').addClass('nav_active').siblings().removeClass('nav_active');
-    });  
+    });
 </script>
 </html>
