--- a/Application/Home/View/Download/filelist.html
+++ b/Application/Home/View/Download/filelist.html
@@ -128,6 +128,7 @@
     </div>
     <include file="Public/footer" />
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/list_footer.js"></script>
     <script>
         $(function(){
             $('#nav_download').addClass('nav_active').siblings().removeClass('nav_active');
