--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -171,6 +171,7 @@
     </div>
     <include file="Public/footer" />
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/list_footer.js"></script>
     <script>
         function waring(){
             alert("您不是专家用户，没有权限邀请组队");
