--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -81,6 +81,7 @@
     <div style="clear:both"></div>
     <include file="Public/footer"/>
     <script src="__PUBLIC__/js/jquery.js"></script>
+    <script src="__PUBLIC__/js/content_footer.js"></script>
     <script>
         $(function(){
             $('#nav_news').addClass('nav_active').siblings().removeClass('nav_active');
