--- a/Application/Home/View/Result/result.html
+++ b/Application/Home/View/Result/result.html
@@ -248,6 +248,7 @@
     </div>
     <include file ="Public/footer"/>
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
 </body>
 <script>
     $(function(){
