--- a/Application/Home/View/Signup/forgetPwd_step1.html
+++ b/Application/Home/View/Signup/forgetPwd_step1.html
@@ -9,7 +9,6 @@
     <style>
         .main{
             width:350px;
-            min-height: 600px;
             margin:0 auto;
             margin-top: 30px;            
         }
@@ -66,5 +65,7 @@
         </div>
     </form>
     <include file="Public/footer"/>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+    
 </body>
 </html>
