--- a/Application/Home/View/Signup/signup.html
+++ b/Application/Home/View/Signup/signup.html
@@ -16,7 +16,6 @@
             border-top-right-radius: 5px;
             border-top-left-radius: 5px;
             margin:40px auto; 
-            margin-bottom: 350px; 
         }
         #tip{
             background-color: #309DFF;
@@ -80,5 +79,7 @@
         </div>
     </div>
     <include file = "Public/footer"/>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+
 </body>
 </html>
