--- a/Application/Home/View/Signup/signup_person.html
+++ b/Application/Home/View/Signup/signup_person.html
@@ -51,6 +51,8 @@
     <include file = "Public/footer"/>
     <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/signup.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+    
     <script>
         $(function() {
             $('#username').change(function(event){
