--- a/Application/Home/View/Team/add.html
+++ b/Application/Home/View/Team/add.html
@@ -58,6 +58,8 @@
     </form>
     <include file="Public/footer" />
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+    
     <script>
         $(function() {
             $('#teamname').change(function(event){
