--- a/Application/Home/View/ClassicCase/caselist.html
+++ b/Application/Home/View/ClassicCase/caselist.html
@@ -62,10 +62,11 @@
     <include file="Public/footer"/>
 
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/list_footer.js"></script>
 </body>
 <script>
-     $(function(){
+    $(function(){
         $('#nav_classic').addClass('nav_active').siblings().removeClass('nav_active');
-    });  
+    });
 </script>
 </html>
