--- a/Application/Home/View/Demand/add.html
+++ b/Application/Home/View/Demand/add.html
@@ -60,6 +60,7 @@
 
     <include file="Public/footer" />
     
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
     <script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
