--- a/Application/Home/View/Edu/edu.html
+++ b/Application/Home/View/Edu/edu.html
@@ -18,7 +18,7 @@
         <div class="position">
             <img src="__PUBLIC__/images/download_06.png">
             您的位置：
-            <a href="__ROOT__">首页</a>
+            <a href="{:U('Index/index')}">首页</a>
             <sapn>&nbsp;>&nbsp;</sapn>
             <a href="{:U('Edu/edulist')}">教育培训</a>
             <sapn>&nbsp;>&nbsp;</sapn>
@@ -81,6 +81,14 @@
 <script>
      $(function(){
         $('#nav_edu').addClass('nav_active').siblings().removeClass('nav_active');
-    });  
+    });
+    (function(){
+        var bodyHeight = document.body.clientHeight;
+        var bottombox = document.getElementById('bottombox');
+        var contentHeight = document.getElementById('main').clientHeight;
+        if((bodyHeight-contentHeight-130)>60){
+            bottombox.className="buttom_fixed";
+        }
+    })();
 </script>
 </html>
