--- a/Application/Home/View/News/newslist.html
+++ b/Application/Home/View/News/newslist.html
@@ -72,6 +72,7 @@
     <include file="Public/footer"/>
 
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/list_footer.js"></script>
 </body>
 <script>
      $(function(){
