--- a/Application/Home/View/Signup/forgetPwd_step2.html
+++ b/Application/Home/View/Signup/forgetPwd_step2.html
@@ -10,7 +10,6 @@
     <style>
         .main{
             width:350px;
-            min-height: 600px;
             margin:0 auto;
             margin-top: 30px;
         }
@@ -68,5 +67,7 @@
     </form>
     <include file = "Public/footer"/>
     <script src="__PUBLIC__/js.jquery.min.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+    
 </body>
 </html>
