--- a/Application/Home/View/Team/team.html
+++ b/Application/Home/View/Team/team.html
@@ -185,6 +185,8 @@
     <include file="Public/footer" />
 
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
+    
 </body>
 <script>
     $(function(){
