--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -177,6 +177,8 @@
     </div>
     <include file="Public/footer" />
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/list_footer.js"></script>
+
     <script>
         function waring () {
             alert("只有专家用户有权限组建团队");
