fix ajax upload file bug in master V1.3

--- a/Application/Home/View/Edu/edu.html
+++ b/Application/Home/View/Edu/edu.html
@@ -83,9 +83,9 @@
         $('#nav_edu').addClass('nav_active').siblings().removeClass('nav_active');
     });
     (function(){
-        var bodyHeight = document.body.clientHeight;
+        var bodyHeight = document.body.innerHeight;
         var bottombox = document.getElementById('bottombox');
-        var contentHeight = document.getElementById('main').clientHeight;
+        var contentHeight = document.getElementById('main').innerHeight;
         if((bodyHeight-contentHeight-130)>60){
             bottombox.className="buttom_fixed";
         }
