--- a/Application/Home/View/Public/link.html
+++ b/Application/Home/View/Public/link.html
@@ -102,9 +102,9 @@
 </body>
 <script>
 	(function(){
-	    var bodyHeight = document.body.clientHeight;
+	    var bodyHeight = document.body.innerHeight;
 	    var bottombox = document.getElementById('bottombox');
-	    var contentHeight = document.getElementsByClassName('link-main')[0].clientHeight;
+	    var contentHeight = document.getElementsByClassName('link-main')[0].innerHeight;
 	    if((bodyHeight-contentHeight-130)>60){
 	        bottombox.className="buttom_fixed";
 	    }
