fixed a bug of index img height. V1.4.2

--- a/Public/css/home/index.css
+++ b/Public/css/home/index.css
@@ -124,7 +124,9 @@ ul,dl,ol{
 }
 .news_picture img,.case_picture img{ 
 	max-width: 300px;
+	max-height: 210px;
 	width: 100%;
+	height: 100%;
 }
 .news_title,.case_title{
 	text-align: center;
