--- a/Application/Home/View/Edu/edu.html
+++ b/Application/Home/View/Edu/edu.html
@@ -75,13 +75,13 @@
     </div>
     
     <include file="Public/footer"/>
-
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
 </body>
 <script>
-     $(function(){
-        $('#nav_edu').addClass('nav_active').siblings().removeClass('nav_active');
-    });
+    
+    var hereNode = document.getElementById('nav_edu');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
+
     (function(){
         var bodyHeight = document.body.innerHeight;
         var bottombox = document.getElementById('bottombox');
