--- a/Application/Home/View/News/newslist.html
+++ b/Application/Home/View/News/newslist.html
@@ -71,12 +71,11 @@
     
     <include file="Public/footer"/>
 
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/list_footer.js"></script>
 </body>
 <script>
-     $(function(){
-        $('#nav_news').addClass('nav_active').siblings().removeClass('nav_active');
-    });  
+    var hereNode = document.getElementById('nav_news');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
 </script>
 </html>
