--- a/Application/Home/View/ClassicCase/caselist.html
+++ b/Application/Home/View/ClassicCase/caselist.html
@@ -61,12 +61,12 @@
     
     <include file="Public/footer"/>
 
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/list_footer.js"></script>
 </body>
 <script>
-    $(function(){
-        $('#nav_classic').addClass('nav_active').siblings().removeClass('nav_active');
-    });
+    var hereNode = document.getElementById('nav_classic');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
+
 </script>
 </html>
