--- a/Application/Home/View/Demand/demand.html
+++ b/Application/Home/View/Demand/demand.html
@@ -151,13 +151,11 @@
         </table>
     </div>
     <include file="Public/footer"/>
-    
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
 </body>
 <script>
-     $(function(){
-        $('#nav_demand').addClass('nav_active').siblings().removeClass('nav_active');
-    });
+    var hereNode = document.getElementById('nav_demand');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
 </script>
 </html>
