--- a/Application/Home/View/Edu/edulist.html
+++ b/Application/Home/View/Edu/edulist.html
@@ -70,13 +70,11 @@
     </div>
     
     <include file="Public/footer"/>
-
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/list_footer.js"></script>
 </body>
 <script>
-     $(function(){
-        $('#nav_edu').addClass('nav_active').siblings().removeClass('nav_active');
-    });  
+    var hereNode = document.getElementById('nav_edu');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
 </script>
 </html>
