--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,7 +3,6 @@
 <head>
     <!-- create by cm -->
     <meta charset="utf-8"> 
-    <script src="__PUBLIC__/js/jquery.js"></script>
     <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
@@ -144,6 +143,7 @@
     </div>
 
     <include file = "Public/footer" />
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script>
         $(function(){
 
