--- a/Application/Home/View/Result/result.html
+++ b/Application/Home/View/Result/result.html
@@ -247,12 +247,11 @@
         </table>
     </div>
     <include file ="Public/footer"/>
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/content_footer_class_main.js"></script>
 </body>
 <script>
-    $(function(){
-        $('#nav_research').addClass('nav_active').siblings().removeClass('nav_active');
-    });
+    var hereNode = document.getElementById('nav_research');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
 </script>
 </html>
