--- a/Application/Home/View/Result/resultlist.html
+++ b/Application/Home/View/Result/resultlist.html
@@ -111,13 +111,13 @@
         </div>
     </div>
     <include file="Public/footer" />
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+
     <script src="__PUBLIC__/js/list_footer.js"></script>
 
 </body>
 <script>
-    $(function(){
-        $('#nav_research').addClass('nav_active').siblings().removeClass('nav_active');
-    });
+    var hereNode = document.getElementById('nav_research');
+    var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
+    hereNode.className = " nav-tip nav_active ";
 </script>
 </html>
